2 kattis problems solved

--- a/Kattis/Code-to-Save-Lives/codetosavelives.ipynb
+++ b/Kattis/Code-to-Save-Lives/codetosavelives.ipynb
@@ -2,73 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "['3', '4', '5']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = \"PAYPALISHIRING\"\n",
-    "s[1:2]\n",
-    "len(s)"
+    "line = '3 4 5'\n",
+    "line.split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "we need 1 row\n",
-      "we need 1 row\n",
-      "we need 1 row\n",
-      "we need 1 row\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'PAHNAPLSIIGYIR'"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['PIN', 'ALSIG', 'YAHR', 'PI']"
+       "345"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = [['P', 'I', 'N'], ['A', 'L', 'S', 'I', 'G'], ['Y', 'A', 'H', 'R'], ['P', 'I']]\n",
-    "\n"
+    "int('345')"
    ]
   },
   {
